fix: 🐛 spacing and errorMessage

--- a/packages/atlas-theme/styles.scss
+++ b/packages/atlas-theme/styles.scss
@@ -4,7 +4,6 @@
 }
 
 .form-item {
-  margin-top: 16px;
 
 	h4, .field__label {
 		font-size: 20px;
@@ -31,7 +30,8 @@
   font-weight: 400;
   font-size: 16px;
   color: #E52222;
-  margin-top: 8px;
+  margin-top: 4px;
+  transform: translate(0px, -24px);
 }
 
 .input-container {
